--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@ html, body {
     padding-top: 10px;
     margin-top: 10px;
     background-color: white;
+    font-weight: bold;
 }
 #reftexthead{
     font-family: Arial, Helvetica, sans-serif;
@@ -15,9 +16,6 @@ html, body {
     margin-left:auto; 
     align-items: center;
     border-radius: 3px;
-}
-#ttscont {
-    background-color: rgb(237, 245, 245);
 }
 #recordcont {
     background-color: rgba(172, 255, 47, 0.055);
@@ -65,6 +63,7 @@ button {
     outline: none;
     color: white;
     transition: background-color 200ms linear;
+    margin-top: 20px;
 }
 button span {
     display: block;
@@ -78,22 +77,16 @@ button span {
     background-color: #3e8e41;
 }
 .h-button {
-    background-color: rgb(77, 155, 155);
+    background-color: #ff7800;
 }
 .h-button:hover {
-    background-color: rgb(28, 117, 117);
+    background-color: #dc6700;
 }
 .blue-button {
     background-color: rgb(60, 128, 170);
 }
 .blue-button:hover {
     background-color: rgb(30, 93, 133);
-}
-.red-button {
-    background-color: #db6247;
-}
-.red-button:hover {
-    background-color: #cc5338;
 }
 #summarytable{
     border-spacing: 5px;
@@ -189,6 +182,10 @@ footer{
 
 @media only screen and (max-width: 500px) {
     button {
-        font-size: 18px;
+        font-size: small;
+    }
+
+    textarea{
+        font-size: small ;
     }
 }
